Some fixes for Bio & collapsable text for 6th class

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -486,3 +486,7 @@ form.options {
 p.docref {
     padding-left: 10px;
 }
+
+div.more {
+    display: none;
+}
